Fix some shiny-stars spacing issues

--- a/styles/app.css
+++ b/styles/app.css
@@ -28,6 +28,9 @@ p {
 p + p {
   margin-top: 16px;
 }
+span.nowrap {
+  white-space: nowrap;
+}
 
 html,
 body {
